--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Como programar en...</title>
+    <link rel="icon" href="Logos/Visual Studio Icon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="frame1" data-url="pagina2.html" onclick="redireccionarPagina(this)">
+    <div class="frame1" data-url="" onclick="redireccionarPagina(this)">
         <div class="bookcsharp">
             <div class="title">
                   <div class="big">Como<br/>programar<br/>en c++</div>
@@ -25,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="frame3" data-url="pagina2.html" onclick="redireccionarPagina(this)">
+    <div class="frame3" data-url="" onclick="redireccionarPagina(this)">
         <div class="bookvisualbasic">
             <div class="title">
                   <div class="big">Como<br/>programar<br/>en Vb</div>
