--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -8,11 +8,51 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <head>
-        <img width="800px" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Logo de la imagen">
-    </head>
-    <footer>
-        Israel C. M. &copy; 2024
-    </footer>
+    <img width="100%" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Logo de la imagen">
+    <div id="Contanier">
+        <head>
+            <div class="Inicio">
+                <h2>Como programar en C#</h2>
+                <br>
+                    <p class="Descripcion">¿Qué es C#?<br>
+                        C# se pronuncia como "C-Sharp". Es un lenguaje de programación orientado a objetos proporcionado por Microsoft que se<br>ejecuta en .NET Framework y .NET Core.<br>
+                        Con la ayuda del lenguaje de programación C#, podemos desarrollar diferentes tipos de aplicaciones seguras y robustas:<br><br>
+                        • Aplicaciones de ventana.<br>
+                        • Aplicaciones web.<br>
+                        • Aplicaciones distribuidas.<br>
+                        • Aplicaciones de servicios web.<br>
+                        • Aplicaciones de bases de datos, etc.<br><br>
+                        C# está aprobado como estándar por ECMA e ISO. C# está diseñado para CLI (Infraestructura de Lenguaje Común). CLI es<br>una especificación que describe el código ejecutable y el entorno de tiempo de ejecución.<br>
+                        El lenguaje de programación C# está influenciado por los lenguajes C++, Java, Eiffel, Modula-3, Pascal, etc.<br><br>
+                        En esta extensa documentación se incluye todos los temas de C#, como el primer ejemplo, declaraciones de control, objetos<br>y clases, herencia, constructor, destructor, esto, estático, sellado, polimorfismo, abstracción, clase abstracta, interfaz, etc,<br>espacio de nombres, encapsulación, propiedades, indexador, matrices, cadenas, regex, manejo de excepciones,<br>multithreading, Archivo IO, Colecciones, etc.
+                    </p>
+                <br>
+            </div>
+        </head>
+        <aside class="Barra lateral">
+            <h2>Esta es una barra lateral</h2>
+        </aside>
+        <section class="contenido">
+            <article>
+                <h3>Hola</h3>
+                <p>Como estan</p>
+            </article>
+            <article>
+                <h3>Hola</h3>
+                <p>Como estan</p>
+            </article>
+            <article>
+                <h3>Hola</h3>
+                <p>Como estan</p>
+            </article>
+            <article>
+                <h3>Hola</h3>
+                <p>Como estan</p>
+            </article>
+        </section>
+        <footer class="PiePagina">
+            <p>Israel . M. &copy; 2024</p>
+        </footer>
+    </div>
 </body>
 </html>
