--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img width="100%" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Logo de la imagen">
+    <img class="ImagenRecortada" width="100%" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Logo de la imagen">
     <div id="Contanier">
         <head>
             <div class="Inicio">
@@ -27,6 +27,7 @@
                         En esta extensa documentación se incluye todos los temas de C#, como el primer ejemplo, declaraciones de control, objetos<br>y clases, herencia, constructor, destructor, esto, estático, sellado, polimorfismo, abstracción, clase abstracta, interfaz, etc,<br>espacio de nombres, encapsulación, propiedades, indexador, matrices, cadenas, regex, manejo de excepciones,<br>multithreading, Archivo IO, Colecciones, etc.
                     </p>
                 <br>
+                <hr>
             </div>
         </head>
         <aside class="Barra lateral">
