--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img class="ImagenRecortada" width="100%" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Logo de la imagen">
+    <img class="ImagenRecortada" width="100%" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Fondo de la imagen">
     <div id="Contanier">
         <head>
             <div class="Inicio">
-                <h2>Como programar en C#</h2>
+                <img class="MiniLogo" width="3%" src="Resources/Imagenes/CSharp_Logos/C Sharp Icon.png" alt="Logo de la imagen">
+                <h2 class="titulopagina">Como programar en C#</h2>
                 <br>
                     <p class="Descripcion">¿Qué es C#?<br>
                         C# se pronuncia como "C-Sharp". Es un lenguaje de programación orientado a objetos proporcionado por Microsoft que se<br>ejecuta en .NET Framework y .NET Core.<br>
