--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <img class="ImagenRecortada" width="100%" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Fondo de la imagen">
     <div id="Contanier">
+
         <head>
-            <div class="Inicio">
+            <div id="Inicio">
                 <img class="MiniLogo" width="3%" src="Resources/Imagenes/CSharp_Logos/C Sharp Icon.png" alt="Logo de la imagen">
                 <h2 class="titulopagina">Como programar en C#</h2>
                 <br>
@@ -28,34 +30,63 @@
                         En esta extensa documentación se incluye todos los temas de C#, como el primer ejemplo, declaraciones de control, objetos<br>y clases, herencia, constructor, destructor, esto, estático, sellado, polimorfismo, abstracción, clase abstracta, interfaz, etc,<br>espacio de nombres, encapsulación, propiedades, indexador, matrices, cadenas, regex, manejo de excepciones,<br>multithreading, Archivo IO, Colecciones, etc.
                     </p>
                 <br>
-                <hr>
+                <h5 class="Tema">📗 Inicio</h5><br><br>
             </div>
         </head>
-        <aside class="Barra lateral">
-            <h2>Esta es una barra lateral</h2>
+
+        <div class="Clearfix"></div>
+
+        <aside id="Barralateral">
+            <h2>Bienvenida</h2>
+            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
+            <hr>
+            <h2>Bienvenida</h2>
+            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
+            <hr>
+            <h2>Bienvenida</h2>
+            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
+            <hr>
+            <h2>Bienvenida</h2>
+            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
             <hr>
         </aside>
-        <section class="contenido">
-            <article>
-                <h3>Hola</h3>
+
+        <section id="Contenido">
+            <h5>Temas</h5>
+            <hr>
+            <article class="article">
+                <h4>Hola</h4>
                 <p>Como estan</p>
+                <hr>
             </article>
-            <article>
-                <h3>Hola</h3>
+            <article class="article">
+                <h4>Hola</h4>
                 <p>Como estan</p>
+                <hr>
             </article>
-            <article>
-                <h3>Hola</h3>
+            <article class="article">
+                <h4>Hola</h4>
                 <p>Como estan</p>
+                <hr>
             </article>
-            <article>
-                <h3>Hola</h3>
+            <article class="article">
+                <h4>Hola</h4>
                 <p>Como estan</p>
+                <hr>
+            </article>
+            <article class="article">
+                <h4>Hola</h4>
+                <p>Como estan</p>
+                <hr>
             </article>
         </section>
-        <footer class="PiePagina">
-            <p>Israel . M. &copy; 2024</p>
+
+        <div class="Clearfix"></div>
+
+        <footer id="PiePagina">
+            <p>J. Israel Carreón Moncada &copy; 2024</p>
         </footer>
+
     </div>
 </body>
 </html>
