--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -39,16 +39,53 @@
         <aside id="Barralateral">
             <h2>Bienvenida</h2>
             <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
-            <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
-            <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
-            <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
+            <hr><br>
+            <h2>C# Introducción</h2>
+            <hr><br>
+            <h2>C# Contro Statement</h2>
+            <hr><br>
+            <h2>C# Function</h2>
+            <hr><br>
+            <h2>C# Arrays</h2>
+            <hr><br>
+            <h2>C# Object Class</h2>
+            <hr><br>
+            <h2>C# Prooperties</h2>
+            <hr><br>
+            <h2>C# Inheritance</h2>
+            <hr><br>
+            <h2>C# Polymorphism</h2>
+            <hr><br>
+            <h2>C# Abstraction</h2>
+            <hr><br>
+            <h2>C# Namespace</h2>
+            <hr><br>
+            <h2>C# String</h2>
+            <hr><br>
+            <h2>C# Exception Handling</h2>
+            <hr><br>
+            <h2>C# File IO</h2>
+            <hr><br>
+            <h2>C# Collections</h2>
+            <hr><br>
+            <h2>C# Sorting Algorithm</h2>
+            <hr><br>
+            <h2>C# Generics</h2>
+            <hr><br>
+            <h2>C# Delegates</h2>
+            <hr><br>
+            <h2>C# Reflection</h2>
+            <hr><br>
+            <h2>C# Anonymous Function</h2>
+            <hr><br>
+            <h2>C# Multithreading</h2>
+            <hr><br>
+            <h2>C# Synchronization</h2>
+            <hr><br>
+            <h2>C# Web Service</h2>
+            <hr><br>
+            <h2>C# Extras</h2>
+            <hr><br>
         </aside>
 
         <section id="Contenido">
