--- a/VisualBasic/index.html
+++ b/VisualBasic/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como programar en C#</title>
-    <link rel="icon" href="Resources/Imagenes/CSharp_Logos/C Sharp Icon.png" type="image/x-icon"/>
+    <title>Como programar en Vb</title>
+    <link rel="icon" href="Imagenes/VisualBasic_Logos/C Sharp Icon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <img class="ImagenRecortada" width="100%" src="Resources/Imagenes/CSharp_Logos/Deep.png" alt="Fondo de la imagen">
+    <img class="ImagenRecortada" width="100%" src="Imagenes/VisualBasic_Logos/Deep.png" alt="Fondo de la imagen">
     <div id="Contanier">
-
         <head>
             <div id="Inicio">
-                <img class="MiniLogo" width="3%" src="Resources/Imagenes/CSharp_Logos/C Sharp Icon.png" alt="Logo de la imagen">
-                <h2 class="titulopagina">Como programar en C#</h2>
+                <img class="MiniLogo" width="3%" src="Imagenes/VisualBasic_Logos/C Sharp Icon.png" alt="Logo de la imagen">
+                <h2 class="titulopagina">Como programar en Vb</h2>
                 <br>
-                    <p class="Descripcion">¿Qué es C#?<br>
+                    <p class="Descripcion">¿Qué es Visual Basic?<br>
                         C# se pronuncia como "C-Sharp". Es un lenguaje de programación orientado a objetos proporcionado por Microsoft que se<br>ejecuta en .NET Framework y .NET Core.<br>
                         Con la ayuda del lenguaje de programación C#, podemos desarrollar diferentes tipos de aplicaciones seguras y robustas:<br><br>
                         • Aplicaciones de ventana.<br>
@@ -38,21 +37,161 @@
 
         <aside id="Barralateral">
             <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
-            <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
-            <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
-            <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
-            <hr>
+            <p class="temario">🌎 Bienvenido a "Como programar en Vb"</p>
+            <hr><br>
+            <h2>Vb Introducción</h2>
+            <p class="temario">⛄ Algoritmos y Lógica"</p><br>
+            <p class="temario">🔴 .NET Framework</p><br>
+            <p class="temario">🟢 .NET Core</p><br>
+            <p class="temario">🖥️ Introduccion a Visual Studio</p><br>
+            <p class="temario">⏩ GitHub</p><br>
+            <p class="temario">👋🏻 Hola mundo</p><br>
+            <p class="temario">🔢 Variables</p><br>
+            <p class="temario">🎆 Tipos de datos</p><br>
+            <p class="temario">🧑🏻‍🔧 Operadores</p><br>
+            <p class="temario">🔑 Palabras claves</p><br>
+            <p class="temario">🏸 Acrónimos</p><br>
+            <hr><br>
+            <h2>Vb Contro Statement</h2>
+            <p class="temario">✅ If - Else</p><br>
+            <p class="temario">🚦 Switch</p><br>
+            <p class="temario">🔁 For Loop</p><br>
+            <p class="temario">🔁 While Loop</p><br>
+            <p class="temario">🔁 Do While Loop</p><br>
+            <p class="temario">🎨 Foreach</p><br>
+            <p class="temario">💔 Break</p><br>
+            <p class="temario">⏸️ Continue</p><br>
+            <p class="temario">📎 Goto</p><br>
+            <p class="temario">🔠 Comments</p><br>
+            <hr><br>
+            <h2>Vb Function</h2>
+            <p class="temario">⚙️ Functions</p><br>
+            <p class="temario">📱 Call by Value</p><br>
+            <p class="temario">🍽️ Call by eferens</p><br>
+            <p class="temario">🕹️ Out Parament</p><br>
+            <hr><br>
+            <h2>Vb Arrays</h2>
+            <p class="temario">🪬 Arrys</p><br>
+            <p class="temario">🀄 Arrays to function</p><br>
+            <p class="temario">🌌 Multidimencional Arrays</p><br>
+            <p class="temario">🏈 Jagged Arrays</p><br>
+            <p class="temario">👞 Params</p><br>
+            <p class="temario">🎑 Array Class</p><br>
+            <p class="temario">🧿 Command line Args</p><br>
+            <hr><br>
+            <h2>Vb Object Class</h2>
+            <p class="temario">📓 Objects and Class</p><br>
+            <p class="temario">🦺 Constructor</p><br>
+            <p class="temario">🧨 Destructor</p><br>
+            <p class="temario">🫳🏻 This</p><br>
+            <p class="temario">⚡ Static</p><br>
+            <p class="temario">🌩️ Static Class</p><br>
+            <p class="temario">⛈️ Static Constructor</p><br>
+            <p class="temario">🌃 Struct</p><br>
+            <p class="temario">🏟️ Enum</p><br>
+            <hr><br>
+            <h2>Vb Properties</h2>
+            <p class="temario">🎏 Properties</p><br>
+            <hr><br>
+            <h2>Vb Inheritance</h2>
+            <p class="temario">🏐 Inheritance</p><br>
+            <p class="temario">🌞 Aggregation</p><br>
+            <hr><br>
+            <h2>Vb Polymorphism</h2>
+            <p class="temario">🎣 Member Overloading</p><br>
+            <p class="temario">📪 Method Overloading</p><br>
+            <p class="temario">⚾ Base</p><br>
+            <p class="temario">🦋 Polymorphism</p><br>
+            <p class="temario">🔒 Sealed</p><br>
+            <hr><br>
+            <h2>Vb Abstraction</h2>
+            <p class="temario">🛏️ Abstract</p><br>
+            <p class="temario">🛂 Interface</p><br>
+            <hr><br>
+            <h2>Vb Namespace</h2>
+            <p class="temario">🚥 Namespaces</p><br>
+            <p class="temario">🏅 Acces Modifiers</p><br>
+            <p class="temario">💊 Encapsulation</p><br>
+            <hr><br>
+            <h2>Vb String</h2>
+            <p class="temario">🏆 String</p><br>
+            <hr><br>
+            <h2>Vb Exception Handling</h2>
+            <p class="temario">💳 Exception Handling</p><br>
+            <p class="temario">🏪 Try/Catch</p><br>
+            <p class="temario">🔚 Finally</p><br>
+            <p class="temario">🎭 Custom Exception</p><br>
+            <p class="temario">🎴 Checked Unchecked</p><br>
+            <p class="temario">🚨 System Exception</p><br>
+            <hr><br>
+            <h2>Vb File IO</h2>
+            <p class="temario">📝 FileStream</p><br>
+            <p class="temario">📝 StreamWriter</p><br>
+            <p class="temario">📝 StreamReader</p><br>
+            <p class="temario">📝 TextWriter</p><br>
+            <p class="temario">📝 TextReader</p><br>
+            <p class="temario">📝 BinaryWriter</p><br>
+            <p class="temario">📝 BinaryReader</p><br>
+            <p class="temario">📝 StringWriter</p><br>
+            <p class="temario">📝 StringReader</p><br>
+            <p class="temario">📄 FileInfo</p><br>
+            <p class="temario">📄 DirectoryInfo</p><br>
+            <p class="temario">📘 Serialization</p><br>
+            <p class="temario">📕Deserialization</p><br>
+            <p class="temario">🎊 System.IO</p><br>
+            <hr><br>
+            <h2>Vb Collections</h2>
+            <p class="temario">🔖 Collections</p><br>
+            <p class="temario">🪄 List&lt;T&gt;</p><br>
+            <p class="temario">🪪 HashSet&lt;T&gt;</p><br>
+            <p class="temario">🛢️ SortedSet&lt;T&gt;</p><br>
+            <p class="temario">🔋 Stack&lt;T&gt;</p><br>
+            <p class="temario">⚽ Queue&lt;T&gt;</p><br>
+            <p class="temario">🏫 LinkedList&lt;T&gt;</p><br>
+            <p class="temario">📖 Dictonary&lt;K,V&gt;</p><br>
+            <p class="temario">🎀 SortedDictionary&lt;K,V&gt;</p><br>
+            <p class="temario">⚖️ SortedList&lt;K,V&gt;</p><br>
+            <hr><br>
+            <h2>Vb Sorting Algorithm</h2>
+            <p class="temario">🎫 Sorting Algorithm</p><br>
+            <hr><br>
+            <h2>Vb Generics</h2>
+            <p class="temario">🌆 Generics</p><br>
+            <hr><br>
+            <h2>Vb Delegates</h2>
+            <p class="temario">🛋️ Delegates</p><br>
+            <hr><br>
+            <h2>Vb Reflection</h2>
+            <p class="temario">🖨️ Reflection</p><br>
+            <hr><br>
+            <h2>Vb Anonymous Function</h2>
+            <p class="temario">🕵🏻‍♀️ Anonymous Function</p><br>
+            <hr><br>
+            <h2>Vb Multithreading</h2>
+            <p class="temario">🏢 Multithreading</p><br>
+            <p class="temario">🏸 Tread Life Class</p><br>
+            <p class="temario">🛸 Tread Class</p><br>
+            <p class="temario">⚾ Main Tread</p><br>
+            <p class="temario">🎖️ Tread Example</p><br>
+            <p class="temario">🎍 Tread Sleep</p><br>
+            <p class="temario">🎰 Tread Abort</p><br>
+            <p class="temario">🎟️ Tread Join</p><br>
+            <p class="temario">📷 Tread Name</p><br>
+            <p class="temario">🎳 Tread Priority</p><br>
+            <hr><br>
+            <h2>Vb Synchronization</h2>
+            <p class="temario">🔄️ Synchronization</p><br>
+            <hr><br>
+            <h2>Vb Web Service</h2>
+            <p class="temario">🌐 Web Service</p><br>
+            <hr><br>
+            <h2>Vb Extras</h2>
+            <p class="temario">🧹 Clean Code</p><br>
+            <hr><br>
         </aside>
 
         <section id="Contenido">
-            <h5>Temas</h5>
+            <h5>📚 Temas</h5>
             <hr>
             <article class="article">
                 <h4>Hola</h4>
@@ -82,11 +221,11 @@
         </section>
 
         <div class="Clearfix"></div>
-
-        <footer id="PiePagina">
-            <p>J. Israel Carreón Moncada &copy; 2024</p>
-        </footer>
-
     </div>
+
+    <footer id="PiePagina">
+        <p>Israel Moncada &copy; 2024</p>
+    </footer>
+
 </body>
 </html>
