--- a/CPlushPlush/index.html
+++ b/CPlushPlush/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a href="../Inicio/index.html">
+        <div class="frame">
+            <div class="button" onclick="void(0);">Regresar</div>
+        </div>
+    </a>
 
     <img class="ImagenRecortada" width="100%" src="Imagenes/CPlushPlush_Logos/Deep.png" alt="Fondo de la imagen">
     <div id="Contanier">
