--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <a href="../CPlushPlush/index.html">
+    <a href="CPlushPlush/index.html">
         <div class="frame1" onclick="Void(0);">
             <div class="bookcsharp">
                 <div class="title">
@@ -20,7 +20,7 @@
             </div>
         </div>
     </a>
-    <a href="../CSharp/index.html">
+    <a href="CSharp/index.html">
         <div class="frame2" onclick="Void(0);">
             <div class="bookcplushplush">
                 <div class="title">
@@ -31,7 +31,7 @@
             </div>
         </div>
     </a>
-    <a href="../VisualBasic/index.html">
+    <a href="VisualBasic/index.html">
         <div class="frame3" onclick="Void(0);">
             <div class="bookvisualbasic">
                 <div class="title">
