--- a/VisualBasic/index.html
+++ b/VisualBasic/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como programar en Vb</title>
-    <link rel="icon" href="Imagenes/VisualBasic_Logos/C Sharp Icon.png" type="image/x-icon"/>
+    <link rel="icon" href="Imagenes/VisualBasic_Logos/VbLogo.png" type="image/x-icon"/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="../Inicio/index.html">
+    <a href="../index.html">
         <div class="frame">
             <div class="button" onclick="void(0);">Regresar</div>
         </div>
@@ -18,7 +18,7 @@
     <div id="Contanier">
         <head>
             <div id="Inicio">
-                <img class="MiniLogo" width="3%" src="Imagenes/VisualBasic_Logos/C Sharp Icon.png" alt="Logo de la imagen">
+                <img class="MiniLogo" width="3%" src="Imagenes/VisualBasic_Logos/VbLogo.png" alt="Logo de la imagen">
                 <h2 class="titulopagina">Como programar en Vb</h2>
                 <br>
                     <p class="Descripcion">¿Qué es Visual Basic?<br>
