--- a/CPlushPlush/index.html
+++ b/CPlushPlush/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como programar en C++</title>
-    <link rel="icon" href="Imagenes/CPlushPlush_Logos/C Sharp Icon.png" type="image/x-icon"/>
+    <link rel="icon" href="Imagenes/CPlushPlush_Logos/CPlushPlushLogo.png" type="image/x-icon"/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="../Inicio/index.html">
+    <a href="../index.html">
         <div class="frame">
             <div class="button" onclick="void(0);">Regresa</div>
         </div>
@@ -19,7 +19,7 @@
 
         <head>
             <div id="Inicio">
-                <img class="MiniLogo" width="3%" src="Imagenes/CPlushPlush_Logos/C Sharp Icon.png" alt="Logo de la imagen">
+                <img class="MiniLogo" width="3%" src="Imagenes/CPlushPlush_Logos/CPlushPlushLogo.png" alt="Logo de la imagen">
                 <h2 class="titulopagina">Como programar en C++</h2>
                 <br>
                     <p class="Descripcion">¿Qué es C++(CPlushPlush)?<br>
