--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="../Inicio/index.html">
+    <a href="../index.html">
         <div class="frame">
             <div class="button" onclick="void(0);">Regresar</div>
         </div>
