--- a/index.html
+++ b/index.html
@@ -6,42 +6,44 @@
     <title>Como programar en...</title>
     <link rel="icon" href="Logos/Visual Studio Icon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    
-    <a href="CPlushPlush/index.html">
-        <div class="frame1" onclick="Void(0);">
-            <div class="bookcplushplush">
-                <div class="title">
-                    <div class="big">Como<br/>programar<br/>en c++</div>
-                    <div class="small">by Israel C. M. &copy; 2024.</div>
-                    <img src="Logos/CPlushPlushLogo.png" alt="CSharpLogo">
+    <div class="Responsive">
+        <a href="CPlushPlush/index.html">
+            <div class="frame1" onclick="Void(0);">
+                <div class="bookcplushplush">
+                    <div class="title">
+                        <div class="big">Como<br/>programar<br/>en c++</div>
+                        <div class="small">by Israel C. M. &copy; 2024.</div>
+                        <img src="Logos/CPlushPlushLogo.png" alt="CSharpLogo">
+                    </div>
                 </div>
             </div>
-        </div>
-    </a>
-    <a href="CSharp/index.html">
-        <div class="frame2" onclick="Void(0);">
-            <div class="bookcsharp">
-                <div class="title">
-                      <div class="big">Como<br/>programar<br/>en c#</div>
-                      <div class="small">by Israel C. M. &copy; 2024.</div>
-                      <img src="Logos/CSharpLogo.png" alt="CSharpLogo">
+        </a>
+        <a href="CSharp/index.html">
+            <div class="frame2" onclick="Void(0);">
+                <div class="bookcsharp">
+                    <div class="title">
+                          <div class="big">Como<br/>programar<br/>en c#</div>
+                          <div class="small">by Israel C. M. &copy; 2024.</div>
+                          <img src="Logos/CSharpLogo.png" alt="CSharpLogo">
+                    </div>
                 </div>
             </div>
-        </div>
-    </a>
-    <a href="VisualBasic/index.html">
-        <div class="frame3" onclick="Void(0);">
-            <div class="bookvisualbasic">
-                <div class="title">
-                    <div class="big">Como<br/>programar<br/>en Vb</div>
-                    <div class="small">by Israel C. M. &copy; 2024.</div>
-                    <img class="bordes" src="Logos/VbLogo.png" alt="VbLogo">
+        </a>
+        <a href="VisualBasic/index.html">
+            <div class="frame3" onclick="Void(0);">
+                <div class="bookvisualbasic">
+                    <div class="title">
+                        <div class="big">Como<br/>programar<br/>en Vb</div>
+                        <div class="small">by Israel C. M. &copy; 2024.</div>
+                        <img class="bordes" src="Logos/VbLogo.png" alt="VbLogo">
+                    </div>
                 </div>
             </div>
-        </div>
-    </a>
+        </a>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
