--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -5,39 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como programar en C#</title>
     <link rel="icon" href="Imagenes/CSharp_Logos/C Sharp Icon.png" type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="../index.html">
-        <div class="frame">
-            <div class="button" onclick="void(0);">Regresar</div>
-        </div>
-    </a>
-
-    <img class="ImagenRecortada" width="100%" src="Imagenes/CSharp_Logos/Deep.png" alt="Fondo de la imagen">
     <div id="Contanier">
-
-        <head>
-            <div id="Inicio">
-                <img class="MiniLogo" width="3%" src="Imagenes/CSharp_Logos/C Sharp Icon.png" alt="Logo de la imagen">
-                <h2 class="titulopagina">Como programar en C#</h2>
-                <br>
-                    <p class="Descripcion">¿Qué es C#?<br>
-                        C# se pronuncia como "C-Sharp". Es un lenguaje de programación orientado a objetos proporcionado por Microsoft que se<br>ejecuta en .NET Framework y .NET Core.<br>
-                        Con la ayuda del lenguaje de programación C#, podemos desarrollar diferentes tipos de aplicaciones seguras y robustas:<br><br>
-                        • Aplicaciones de ventana.<br>
-                        • Aplicaciones web.<br>
-                        • Aplicaciones distribuidas.<br>
-                        • Aplicaciones de servicios web.<br>
-                        • Aplicaciones de bases de datos, etc.<br><br>
-                        C# está aprobado como estándar por ECMA e ISO. C# está diseñado para CLI (Infraestructura de Lenguaje Común). CLI es<br>una especificación que describe el código ejecutable y el entorno de tiempo de ejecución.<br>
-                        El lenguaje de programación C# está influenciado por los lenguajes C++, Java, Eiffel, Modula-3, Pascal, etc.<br><br>
-                        En esta extensa documentación se incluye todos los temas de C#, como el primer ejemplo, declaraciones de control, objetos<br>y clases, herencia, constructor, destructor, esto, estático, sellado, polimorfismo, abstracción, clase abstracta, interfaz, etc,<br>espacio de nombres, encapsulación, propiedades, indexador, matrices, cadenas, regex, manejo de excepciones,<br>multithreading, Archivo IO, Colecciones, etc.
-                    </p>
-                <br>
-                <h5 class="Tema">📗 Inicio</h5><br><br>
-            </div>
-        </head>
+        <div id="Portada">
+            <a href="../index.html">
+                <div class="frame">
+                    <div class="button" onclick="void(0);">Regresar</div>
+                </div>
+            </a>
+            <img class="ImagenRecortada" width="100%" src="Imagenes/CSharp_Logos/Deep.png" alt="Fondo de la imagen">
+        </div>
+        
+        <div id="Inicio">
+            <img width="3%" src="Imagenes/CSharp_Logos/C Sharp Icon.png" alt="Logo de la imagen">
+            <h2>Como programar en C#</h2>
+            <br>
+                <p>¿Qué es C#?<br>
+                    C# se pronuncia como "C-Sharp". Es un lenguaje de programación orientado a objetos proporcionado por Microsoft que se<br>ejecuta en .NET Framework y .NET Core.<br>
+                    Con la ayuda del lenguaje de programación C#, podemos desarrollar diferentes tipos de aplicaciones seguras y robustas:<br><br>
+                    • Aplicaciones de ventana.<br>
+                    • Aplicaciones web.<br>
+                    • Aplicaciones distribuidas.<br>
+                    • Aplicaciones de servicios web.<br>
+                    • Aplicaciones de bases de datos, etc.<br><br>
+                    C# está aprobado como estándar por ECMA e ISO. C# está diseñado para CLI (Infraestructura de Lenguaje Común). CLI es<br>una especificación que describe el código ejecutable y el entorno de tiempo de ejecución.<br>
+                    El lenguaje de programación C# está influenciado por los lenguajes C++, Java, Eiffel, Modula-3, Pascal, etc.<br><br>
+                    En esta extensa documentación se incluye todos los temas de C#, como el primer ejemplo, declaraciones de control, objetos<br>y clases, herencia, constructor, destructor, esto, estático, sellado, polimorfismo, abstracción, clase abstracta, interfaz, etc,<br>espacio de nombres, encapsulación, propiedades, indexador, matrices, cadenas, regex, manejo de excepciones,<br>multithreading, Archivo IO, Colecciones, etc.
+                </p>
+            <br>
+            <h5>📗 Inicio</h5><br><br>
+        </div>
+        
 
         <div class="Clearfix"></div>
 
@@ -227,11 +228,10 @@
         </section>
 
         <div class="Clearfix"></div>
+
+        <footer id="PieDePagina">
+            <p>Israel Moncada &copy; 2024</p>
+        </footer>
     </div>
-
-    <footer id="PiePagina">
-        <p>Israel Moncada &copy; 2024</p>
-    </footer>
-
 </body>
 </html>
